--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
-    <title>Glassmorphism login Form Tutorial in html css</title>
+    <title>Adeigbe Ameer | Business card</title>
  
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -192,6 +192,14 @@ h2{
     font-family: 'Josefin Sans';
     font-size: 40px;
 }
+.dev:hover{
+    font-size: 11px;
+    color: #d76b00;
+}
+.dev{
+    font-size: 9px;
+    text-align: center;
+}
 @media only screen and (max-width: 400px) {
   .background, form{
     position: absolute;
@@ -221,7 +229,9 @@ h2{
             
         </div>
 
-        <h2>Ameer Techsoft</h2>
+        <h3>AMEER TECHSOFT</h3>
+        <p style="font-size: 11px; text-align: center;">If You Can Think It, We can Build it...</p>
+        <p class="dev" >#Web_Development | #Software_Development | #Graphics </p>
         <div class="social">
           <a style="text-decoration: none;" href="https://www.google.ru/search?q=ameer%20adeigbe"><div class="go"><i class="fab fa-google"></i>  Google</div></a>
           <a style="text-decoration: none;" href="https://www.linkedin.com/in/ameer-adeigbe-02bb82164"><div class="ln"><i class="fab fa-linkedin"></i>  LinkedIn</div></a>
