--- a/index.html
+++ b/index.html
@@ -244,7 +244,28 @@ h2{
             <a style="text-decoration: none;" href="tel:+2348134714184"><div class="mo"><i class="fas fa-phone-alt"></i>  Mobile</div></a>
             <a style="text-decoration: none;" href="mailto:ameeradeigbe@gmail.com"><div class="emi"><i class="fas fa-at"></i>  E-mail</div></a>
         </div>
+        <button id="save-button">Save Contact</button>
     </form>
+    
   
 </body>
 </html>
+
+<script>
+  // Get the button element
+  const saveButton = document.getElementById('save-button');
+
+  // Add a click event listener to the button
+  saveButton.addEventListener('click', function() {
+    // Get the contact details from the form or other source
+    const contact = {
+      name: 'Ameer Adeigbe',
+      phone: '+2348134714184',
+      email: 'ameeradeigbe'
+    };
+
+    // Use the device's contacts API to add the new contact
+    navigator.contacts.save(contact);
+  });
+</script>
+
