--- a/index.html
+++ b/index.html
@@ -244,28 +244,75 @@ h2{
             <a style="text-decoration: none;" href="tel:+2348134714184"><div class="mo"><i class="fas fa-phone-alt"></i>  Mobile</div></a>
             <a style="text-decoration: none;" href="mailto:ameeradeigbe@gmail.com"><div class="emi"><i class="fas fa-at"></i>  E-mail</div></a>
         </div>
-        <button id="save-button">Save Contact</button>
+        <button onclick="saveContact()">Save Contact</button>
     </form>
     
-  
+  <script>
+    function saveContact() {
+  // Check if the device is a mobile device and if the navigator.contacts API is supported
+  var isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+  if (isMobile && navigator.contacts) {
+    // Create a new contact object
+    var contact = navigator.contacts.create();
+
+    // Set the contact's properties
+    contact.displayName = 'FirstName LastName';
+    contact.nickname = 'FirstName';
+    contact.organizations = [{
+      name: 'CompanyName',
+      title: 'JobTitle'
+    }];
+    contact.phoneNumbers = [{
+      type: 'work',
+      value: '123-456-7890',
+      pref: true
+    }];
+    contact.emails = [{
+      type: 'work',
+      value: 'email@example.com',
+      pref: true
+    }];
+    contact.urls = [{
+      type: 'work',
+      value: 'http://www.example.com',
+      pref: true
+    }];
+    contact.note = 'Additional information about the person.';
+
+    // Save the contact
+    contact.save(function() {
+      // Contact saved successfully
+      console.log('Contact saved successfully');
+    }, function(error) {
+      // Error saving contact
+      console.error('Error saving contact: ' + error);
+    });
+  } else {
+    // If the device is not a mobile device or the navigator.contacts API is not supported, use the data: protocol to create a download link for the vCard file
+    var vcard = 'BEGIN:VCARD\n' +
+                'VERSION:3.0\n' +
+                'N:LastName;FirstName\n' +
+                'FN:FirstName LastName\n' +
+                'ORG:CompanyName\n' +
+                'TITLE:JobTitle\n' +
+                'TEL;TYPE=work,voice;VALUE=uri:tel:123-456-7890\n' +
+                'EMAIL:email@example.com\n' +
+                'URL:http://www.example.com\n' +
+                'NOTE:Additional information about the person.\n' +
+                'END:VCARD';
+                
+    vcard = encodeURIComponent(vcard);
+    var link = document.createElement('a');
+    link.href = 'data:text/x-vcard;charset=utf-8,' + vcard;
+    link.download = 'contact.vcf';
+    document.body.appendChild(link);
+    link.click();
+    document.body.removeChild(link);
+  }
+}
+  </script>
 </body>
 </html>
 
-<script>
-  // Get the button element
-  const saveButton = document.getElementById('save-button');
 
-  // Add a click event listener to the button
-  saveButton.addEventListener('click', function() {
-    // Get the contact details from the form or other source
-    const contact = {
-      name: 'Ameer Adeigbe',
-      phone: '+2348134714184',
-      email: 'ameeradeigbe'
-    };
-
-    // Use the device's contacts API to add the new contact
-    navigator.contacts.save(contact);
-  });
-</script>
 
