--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 </head>
 <body>
     <div class="background">
-      <div style="display: flex;">
-        <div class="hape"></div>
-        <div class="shape"></div></div>
-    </div>
+      <div class="star-field">
+        <div class="layer"></div>
+        <div class="layer"></div>
+        <div class="layer"></div>
+        </div>
     <form>
         <img class="top1" src="src/AmeerTechsoft.png" alt="logo">
         
