--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a style="text-decoration: none;" href="https://www.google.ru/search?q=ameer%20adeigbe"><div class="go"><i class="fab fa-google"></i>  </div></a>
           <a style="text-decoration: none;" href="https://www.linkedin.com/in/ameer-adeigbe-02bb82164"><div class="ln"><i class="fab fa-linkedin"></i>  </div></a>
             <a style="text-decoration: none;" href="https://wa.me/message/6GL43KUI2HERB1"><div class="wh"><i class="fab fa-whatsapp"></i>  </div></a>
-            <a style="text-decoration: none;" href="https://www.instagram.com/ameer_tsoft"><div class="ins"><i class="fab fa-instagram"></i>  </div></a>
+            <a style="text-decoration: none;" href="https://www.instagram.com/ameer_techsoft"><div class="ins"><i class="fab fa-instagram"></i>  </div></a>
             <a style="text-decoration: none;" href="https://github.com/AmeerTechsoft/"><div class="git"><i class="fa-brands fa-github"></i>  </div></a>
         </div>
         <div class="social-2">
@@ -64,7 +64,7 @@
   const linkedinUrl = "https://www.linkedin.com/in/ameeradeigbe"; // Replace with the actual LinkedIn URL
   const twitterUrl = "https://twitter.com/ameeradeigbe";
   const whatsappUrl = "https://wa.me/message/6GL43KUI2HERB1";
-  const instagramUrl = "https://www.instagram.com/ameer_tsoft";
+  const instagramUrl = "https://www.instagram.com/ameer_techsoft";
   const githubUrl = "https://github.com/AmeerTechsoft/";
 
   downloadButton.addEventListener("click", () => {
